# IonizationToyMCSim

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: LaserGenerator.h  MuGenerator.h  OBEsolver.h  RootManager.h  RunManager.h  common.h
run/: ioni_test.mac
run/ana/: drawDopp_E_rho.cpp  drawErho_ion.cpp  drawLW_Dopp_rho.cpp  drawLaserProfile.cpp  drawYZ_ion.cpp  drawYZ_ionized_profile.cpp  example_analysis.C
run/ana/plots/: rho_ion_yz_80GHz.root  rho_ion_yzproj.root
src/: LaserGenerator.cpp  MuGenerator.cpp  OBEsolver.cpp  RootManager.cpp  RunManager.cpp
